--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@testing-library/user-event": "^7.1.2",
     "activestorage": "^5.2.4-4",
     "axios": "^0.20.0",
+    "bootstrap": "^4.5.2",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
