--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "activestorage": "^5.2.4-4",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
+    "path": "^0.12.7",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
